# I-Form_Research_Server_Stack

./: .env  .gitignore  README.md  backend.yaml  deploy  docker-compose.yaml  elab_db.yaml  elab_web.yaml  frontend.yaml  ip_map.txt  networks.yaml  pyproject.toml  secrets.yaml  stack.yaml  volumes.yaml
env_samples/: dataverse.env
src/portainer/: build.py  pyproject.toml
src/portainer_api/: pyproject.toml
src/portainer_backup/: pyproject.toml
