[tool.poetry]
name = "deploy"
version = "0.1.0"
description = ""
authors = ["Cian Hughes <cian.hughes@dcu.ie>"]
readme = "README.md"
packages = [
    { include = "deploy", from = "." },
    # { include = "portainer", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
portainer = {path = "src/portainer"}

[tool.poetry.group.dev.dependencies]
snoop = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
